--- a/src/VAE.ipynb
+++ b/src/VAE.ipynb
@@ -34,9 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)"
@@ -152,6 +160,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 16000])\n"
+     ]
     }
    ],
    "source": [
@@ -170,22 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 64, 1601])\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/joe/miniconda3/lib/python3.10/site-packages/torchaudio/functional/functional.py:571: UserWarning: At least one mel filterbank has all zero values. The value for `n_mels` (128) may be set too high. Or, the value for `n_freqs` (257) may be set too low.\n",
       "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 64, 1601])\n"
      ]
     },
     {
@@ -296,65 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "===========================================================================\n",
-       "Layer (type:depth-idx)                             Param #\n",
-       "===========================================================================\n",
-       "AudioVAE                                           --\n",
-       "├─ConvASREncoder: 1-1                              --\n",
-       "│    └─ConvBlock: 2-1                              --\n",
-       "│    │    └─ModuleList: 3-1                        9,152\n",
-       "│    │    └─Sequential: 3-2                        --\n",
-       "│    └─ConvBlock: 2-2                              --\n",
-       "│    │    └─ModuleList: 3-3                        9,984\n",
-       "│    │    └─ModuleList: 3-4                        8,320\n",
-       "│    │    └─Sequential: 3-5                        --\n",
-       "│    └─ConvBlock: 2-3                              --\n",
-       "│    │    └─ModuleList: 3-6                        5,184\n",
-       "│    │    └─ModuleList: 3-7                        4,224\n",
-       "│    │    └─Sequential: 3-8                        --\n",
-       "│    └─ConvBlock: 2-4                              --\n",
-       "│    │    └─ModuleList: 3-9                        5,312\n",
-       "│    │    └─ModuleList: 3-10                       4,224\n",
-       "│    │    └─Sequential: 3-11                       --\n",
-       "│    └─ConvBlock: 2-5                              --\n",
-       "│    │    └─ModuleList: 3-12                       10,304\n",
-       "│    │    └─Sequential: 3-13                       --\n",
-       "│    └─ConvBlock: 2-6                              --\n",
-       "│    │    └─ModuleList: 3-14                       16,768\n",
-       "│    │    └─Sequential: 3-15                       --\n",
-       "│    └─Sequential: 2-7                             73,472\n",
-       "│    │    └─ConvBlock: 3-16                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-17                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-18                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-19                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-20                        (recursive)\n",
-       "│    │    └─ConvBlock: 3-21                        (recursive)\n",
-       "├─AdaptiveAvgPool1d: 1-2                           --\n",
-       "├─Flatten: 1-3                                     --\n",
-       "├─Linear: 1-4                                      12,384\n",
-       "├─Linear: 1-5                                      12,384\n",
-       "├─ConvTranspose2d: 1-6                             7,204\n",
-       "├─ConvTranspose2d: 1-7                             28,948\n",
-       "├─ConvTranspose2d: 1-8                             14,474\n",
-       "├─ConvTranspose2d: 1-9                             3,619\n",
-       "===========================================================================\n",
-       "Total params: 225,957\n",
-       "Trainable params: 225,957\n",
-       "Non-trainable params: 0\n",
-       "==========================================================================="
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from matchbox.ConvASREncoder import ConvASREncoder\n",
     "\n",
@@ -423,13 +382,143 @@
     "        z = self.reparameterize(mu, logVar)\n",
     "        out = self.decode(z)\n",
     "        return out, mu, logVar\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AudioVAE2(nn.Module):\n",
+    "    def __init__(self,num_mels=64,input_length=1601,featureDim=320,zDim=96) -> None:\n",
+    "        super().__init__()\n",
     "\n",
-    "model = AudioVAE()\n",
+    "        #encoder\n",
+    "        self.encConv1= nn.Conv1d(64,32,400)\n",
+    "        self.batchnorm1 = nn.BatchNorm1d(32)\n",
+    "        self.encConv2= nn.Conv1d(32,16,400)\n",
+    "        self.batchnorm2 = nn.BatchNorm1d(16)\n",
+    "        self.encConv3= nn.Conv1d(16,8,400)\n",
+    "        self.batchnorm3 = nn.BatchNorm1d(8)\n",
+    "\n",
+    "        self.pooling= nn.MaxPool1d(10,return_indices=True)\n",
+    "        self.flatten= nn.Flatten()\n",
+    "\n",
+    "        self.encFC1 = nn.Linear(featureDim, zDim)\n",
+    "        self.encFC2 = nn.Linear(featureDim, zDim)\n",
+    "\n",
+    "        #decoder\n",
+    "        self.decFC1 = nn.Linear(zDim,featureDim)\n",
+    "\n",
+    "        self.unpool= nn.MaxUnpool1d(10)\n",
+    "        self.batchnorm4 = nn.BatchNorm1d(8)\n",
+    "        self.decConv1 = nn.ConvTranspose1d(8, 16, 400)\n",
+    "        self.batchnorm5 = nn.BatchNorm1d(16)\n",
+    "        self.decConv2 = nn.ConvTranspose1d(16, 32, 400)\n",
+    "        self.batchnorm6 = nn.BatchNorm1d(32)\n",
+    "        self.decConv3 = nn.ConvTranspose1d(32, 64, 400)\n",
+    "      \n",
+    "        self.indices=0\n",
+    "\n",
+    "\n",
+    "    def reparameterize(self, mu, logVar):\n",
+    "        #Reparameterization takes in the input mu and logVar and sample the mu + std * eps\n",
+    "        std = torch.exp(logVar/2)\n",
+    "        eps = torch.randn_like(std)\n",
+    "        return mu + std * eps\n",
+    "\n",
+    "    def encode(self,x):\n",
+    "        x=x.permute(0,2,1)\n",
+    "        #print(x.shape)\n",
+    "        x= F.relu(self.batchnorm1(self.encConv1(x)))\n",
+    "        #print(x.shape)\n",
+    "        x=F.relu(self.batchnorm2(self.encConv2(x)))\n",
+    "        #print(x.shape)\n",
+    "        x=F.relu(self.batchnorm3(self.encConv3(x)))\n",
+    "        #print(x.shape)\n",
+    "        x,self.indices=self.pooling(x)\n",
+    "        #print(x.shape)\n",
+    "        x=self.flatten(x)\n",
+    "        #print(x.shape)\n",
+    "\n",
+    "        mu=self.encFC1(x)\n",
+    "        logVar=self.encFC2(x)\n",
+    "        #print(logVar.shape)\n",
+    "        return mu,logVar\n",
+    "    \n",
+    "    def decode(self,x):\n",
+    "        x=F.relu(self.decFC1(x))\n",
+    "        x=x.view([-1,8,40])\n",
+    "        x=self.unpool(x,self.indices)\n",
+    "        x=self.batchnorm4(x)\n",
+    "        x=F.relu(self.batchnorm5(self.decConv1(x)))\n",
+    "        x=F.relu(self.batchnorm6(self.decConv2(x)))\n",
+    "        x=F.relu(self.decConv3(x))\n",
+    "        #print(x.shape)\n",
+    "        \n",
+    "        x = torch.nn.functional.pad(input=x,pad=[0,4],mode='constant', value=0)\n",
+    "        #print(x.shape)\n",
+    "        return x.permute(0,2,1)\n",
+    "\n",
+    "    def forward(self,x):\n",
+    "        #out=self.encode(x)\n",
+    "        #print(out.shape)\n",
+    "        mu, logVar = self.encode(x)\n",
+    "        z = self.reparameterize(mu, logVar)\n",
+    "        out = self.decode(z)\n",
+    "        return out, mu, logVar\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "=================================================================\n",
+       "Layer (type:depth-idx)                   Param #\n",
+       "=================================================================\n",
+       "AudioVAE2                                --\n",
+       "├─Conv1d: 1-1                            819,232\n",
+       "├─BatchNorm1d: 1-2                       64\n",
+       "├─Conv1d: 1-3                            204,816\n",
+       "├─BatchNorm1d: 1-4                       32\n",
+       "├─Conv1d: 1-5                            51,208\n",
+       "├─BatchNorm1d: 1-6                       16\n",
+       "├─MaxPool1d: 1-7                         --\n",
+       "├─Flatten: 1-8                           --\n",
+       "├─Linear: 1-9                            30,816\n",
+       "├─Linear: 1-10                           30,816\n",
+       "├─Linear: 1-11                           31,040\n",
+       "├─MaxUnpool1d: 1-12                      --\n",
+       "├─BatchNorm1d: 1-13                      16\n",
+       "├─ConvTranspose1d: 1-14                  51,216\n",
+       "├─BatchNorm1d: 1-15                      32\n",
+       "├─ConvTranspose1d: 1-16                  204,832\n",
+       "├─BatchNorm1d: 1-17                      64\n",
+       "├─ConvTranspose1d: 1-18                  819,264\n",
+       "=================================================================\n",
+       "Total params: 2,243,464\n",
+       "Trainable params: 2,243,464\n",
+       "Non-trainable params: 0\n",
+       "================================================================="
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = AudioVAE2()\n",
     "#For parallel gpus\n",
     "#model = nn.DataParallel(model)\n",
     "model.to(device)\n",
-    "summary(model)\n",
-    "    "
+    "summary(model)"
    ]
   },
   {
@@ -442,29 +531,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0 Progress:   0%|          | 0/332 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([256, 1601, 64])\n",
-      "torch.Size([256, 1601, 64])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0 Progress:   0%|          | 0/332 [00:10<?, ?it/s]\n"
+      "Epoch 0 Progress:   0%|          | 0/332 [00:00<?, ?it/s]/home/joe/miniconda3/lib/python3.10/site-packages/torchaudio/functional/functional.py:571: UserWarning: At least one mel filterbank has all zero values. The value for `n_mels` (128) may be set too high. Or, the value for `n_freqs` (257) may be set too low.\n",
+      "  warnings.warn(\n",
+      "Epoch 0 Progress, Reconst Loss: 10.855663299560547, KL Div: 22.760868072509766:   2%|▏         | 7/332 [00:18<14:00,  2.59s/it]\n"
      ]
     },
     {
@@ -474,14 +550,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     24\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[0;32m---> 26\u001b[0m progress_bar\u001b[39m.\u001b[39mset_description (\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m Progress, Reconst Loss: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m, KL Div: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat( epoch,reconst_loss\u001b[39m.\u001b[39;49mitem()\u001b[39m/\u001b[39mbatch_size, kl_div\u001b[39m.\u001b[39mitem()\u001b[39m/\u001b[39mbatch_size))\n",
+      "Cell \u001b[0;32mIn[12], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     24\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[0;32m---> 26\u001b[0m progress_bar\u001b[39m.\u001b[39mset_description (\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m Progress, Reconst Loss: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m, KL Div: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat( epoch,reconst_loss\u001b[39m.\u001b[39;49mitem()\u001b[39m/\u001b[39mbatch_size, kl_div\u001b[39m.\u001b[39mitem()\u001b[39m/\u001b[39mbatch_size))\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "learning_rate = 1e-2\n",
-    "num_epochs = 1\n",
+    "learning_rate = 1e-3\n",
+    "num_epochs = 10\n",
     "\n",
     "model.train()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
@@ -518,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
