updated model added dataset fixed bugs and started prep for future experiments

--- a/src/pre_transform_analysis/Comparaison.ipynb
+++ b/src/pre_transform_analysis/Comparaison.ipynb
@@ -64,7 +64,7 @@
     "        batch (int): batch size\n",
     "\n",
     "    Returns:\n",
-    "        batch: return batched data in the form ; audio_tensor,target,task_label\n",
+    "        batch: return batched data in the form ; tensors,targets\n",
     "    \"\"\"\n",
     "    tensors, targets, t_labels = [], [], []\n",
     "    for waveform, label, rate, sid, uid in batch:\n",
@@ -163,7 +163,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## UMAP"
+    "## UMAP Comparaison"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will first start by comparing the separation power of the two transforms using UMAP."
    ]
   },
   {
