--- a/src/Separation.ipynb
+++ b/src/Separation.ipynb
@@ -56,7 +56,8 @@
    ],
    "source": [
     "import torch\n",
-    "from dataset import SpeechCommandsData,Scattering\n",
+    "from dataset import SpeechCommandsData\n",
+    "from transforms import Scattering\n",
     "from models import EncDecBaseModel\n",
     "import umap\n",
     "import pathlib\n",
