--- a/src/pre_transform_analysis/Comparaison.ipynb
+++ b/src/pre_transform_analysis/Comparaison.ipynb
@@ -35,7 +35,8 @@
     "sys.path.append('../')\n",
     "\n",
     "import torch\n",
-    "from dataset import SpeechCommandsData,MfccTransform,Scattering\n",
+    "from dataset import SpeechCommandsData\n",
+    "from transforms import MfccTransform,Scattering\n",
     "from models import EncDecBaseModel\n",
     "from kymatio.torch import Scattering1D\n",
     "import umap\n",
